--- a/ntu.xzmcwjzs.IBLL/IServices/IServices.tt
+++ b/ntu.xzmcwjzs.IBLL/IServices/IServices.tt
@@ -7,6 +7,12 @@
 <#@ import namespace="System.Text" #> 
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extension=".cs" #>
+<#@ assembly name="System.Data" #>  
+<#@ assembly name="System.xml" #>  
+<#@ import namespace="System.Collections.Generic" #>  
+<#@ import namespace="System.Data.SqlClient" #>  
+<#@ import namespace="System.Data" #>  
+
 using ntu.xzmcwjzs.Model.Entities;
 using System;
 using System.Collections.Generic;
@@ -16,21 +22,36 @@ using System.Threading.Tasks;
 
 namespace ntu.xzmcwjzs.IBLL.IServices
 {
-    <#
+ <#
             
-            string currentPath =Path.GetDirectoryName(this.Host.TemplateFile);
-            string solutionPath = currentPath.Substring(0, currentPath.IndexOf(@"\ntu.xzmcwjzs.IBLL"));
-            string txtFilePath= Path.Combine(solutionPath, @"ntu.xzmcwjzs.Model\ClassNameTxt\ClassName.txt");  
-            string[] ClassNameList =new string[]{""};
-            using(StreamReader reader=new StreamReader(txtFilePath)){
-                 string classNameStr=reader.ReadToEnd();
-                 int index=classNameStr.LastIndexOf(',');
-	             classNameStr=classNameStr.Substring(0,index);
-                 ClassNameList= classNameStr.Split(',');
-          }
+            //string currentPath =Path.GetDirectoryName(this.Host.TemplateFile);
+            //string solutionPath = currentPath.Substring(0, currentPath.IndexOf(@"\ntu.xzmcwjzs.DAL"));
+            //string txtFilePath= Path.Combine(solutionPath, @"ntu.xzmcwjzs.Model\ClassNameTxt\ClassName.txt");  
+            //string[] ClassNameList =new string[]{""};
+            //using(StreamReader reader=new StreamReader(txtFilePath)){
+            //string classNameStr=reader.ReadToEnd();
+           //int index=classNameStr.LastIndexOf(',');
+	       //classNameStr=classNameStr.Substring(0,index);
+          //ClassNameList= classNameStr.Split(',');
+          //}
+    List<string> ClassNameList =new List<string>();
+    string connectionString ="server=.;database=XZMCWJZS;integrated security=true";
+    SqlConnection conn = new SqlConnection(connectionString);  
+    conn.Open();  
+    System.Data.DataTable schema = conn.GetSchema("TABLES");  
+    string selectQuery = "select * from @tableName";  
+    SqlCommand command = new SqlCommand(selectQuery,conn);  
+    SqlDataAdapter ad = new SqlDataAdapter(command);  
+    System.Data.DataSet ds = new DataSet();  
+    foreach(System.Data.DataRow row in schema.Rows)  {
+    if(row["TABLE_NAME"].ToString()!="__MigrationHistory"){
+            ClassNameList.Add(row["TABLE_NAME"].ToString());
+    }
+    
+}
         #>
 <#
-    if(ClassNameList[0]!=""){
+    if(ClassNameList.Count>0){
 foreach (string className in ClassNameList)
 { 
 #>		
