--- a/ntu.xzmcwjzs.WebApp/Views/Shared/_Index_LayoutEdit.cshtml
+++ b/ntu.xzmcwjzs.WebApp/Views/Shared/_Index_LayoutEdit.cshtml
@@ -6,11 +6,10 @@
     <title>Main</title> 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jquery-easyui")
-    @Styles.Render("~/Content/jquery-easyui") 
-    <script src="@Url.Content("~/Scripts/jquery.form.js")" type="text/javascript"></script>  
-    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
+        @Styles.Render("~/Content/jquery-easyui")
+    <script src="~/Scripts/jquery.form.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script> 
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>      
 </head>
 <body>
     <div>
