--- a/ntu.xzmcwjzs.WebApp/Views/Test/Create.cshtml
+++ b/ntu.xzmcwjzs.WebApp/Views/Test/Create.cshtml
@@ -5,43 +5,47 @@
 
 }
 
-
 <script type="text/javascript">
+    //$(function () {
+    //    $("#btnSave").click(function () {
+    //        $("#CreateForm").submit(); 
+    //    });
+    //});
     $(function () {
-      
         $("#btnSave").click(function () { 
-                $.ajax({
-                    url: "/Test/Create",
-                    type: "Post",
-                    data: $("#CreateForm").serialize(),
-                    dataType: "json",
-                    success: function (data) {
-                        if (data == 1) {
-                            window.parent.frameReturnByMes("成功");
-                            window.parent.frameReturnByReload(true);
-                            window.parent.frameReturnByClose()
-                        }
-                        else {
-                            window.parent.frameReturnByMes("失败");
-                        }
+            $.ajax({
+                url: "/Test/Create",
+                type: "Post",
+                data: $("#CreateForm").serialize(),
+                dataType: "json",
+                success: function (data) {
+                    if (data == 1) {
+                        window.parent.frameReturnByMes("成功");
+                        window.parent.frameReturnByReload(true);
+                        window.parent.frameReturnByClose()
                     }
-                });
+                    else {
+                        window.parent.frameReturnByMes("失败");
+                    }
+                }
+            });
         });
     });
 </script>
 
 
-<div class="mvctool bgb">
+<div>
     <a id="btnSave" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-save'">保存</a>
 </div>
-@using (Html.BeginForm("Create", "Test", null, FormMethod.Post, new { Id = "CreateForm" }))
+@using (Html.BeginForm("Create", "Test", null, FormMethod.Post, new { id = "CreateForm" }))
 {
+    @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     <table>
         <tbody>
             <tr>
                 <td style="width:100px; text-align:right;">
-                    @Html.LabelFor(model => model.id)：
+                    ID：
                 </td>
                 <td style="width:310px">
                     @Html.EditorFor(model => model.id)
@@ -50,7 +54,7 @@
             </tr>
             <tr>
                 <td style="width:100px; text-align:right;">
-                    @Html.LabelFor(model => model.name)：
+                    姓名：
                 </td>
                 <td>
                     @Html.EditorFor(model => model.name)
@@ -61,7 +65,7 @@
             </tr>
             <tr>
                 <td style="width:100px; text-align:right;">
-                    @Html.LabelFor(model => model.password)：
+                    密码：
                 </td>
 
                 <td>
@@ -73,7 +77,7 @@
             </tr>
             <tr>
                 <td style="width:100px; text-align:right;">
-                    @Html.LabelFor(model => model.id_card_num)：
+                    身份证号：
                 </td>
 
                 <td>
@@ -86,7 +90,7 @@
 
             <tr>
                 <td style="width:100px; text-align:right;">
-                    @Html.LabelFor(model => model.birthdate)：
+                    出身日期：
                 </td>
 
                 <td>
@@ -98,10 +102,8 @@
             </tr>
             <tr>
                 <td style="width:100px; text-align:right;">
-                    @Html.LabelFor(model => model.photo)：
-
+                    美图：
                 </td>
-
                 <td>
                     @Html.TextBoxFor(model => model.photo)
 
@@ -112,13 +114,11 @@
             </tr>
             <tr>
                 <td style="width:100px; text-align:right;">
-                    @Html.LabelFor(model => model.createtime)：
+                    创建日期：
                 </td>
                 <td>
                     @Html.TextBoxFor(model => model.createtime)
-
                 </td>
-
                 <td>
                     @Html.ValidationMessageFor(model => model.createtime)
                 </td>
@@ -126,4 +126,3 @@
         </tbody>
     </table>
 }
- 
