--- a/ntu.xzmcwjzs.WebApp/Views/Test/Index.cshtml
+++ b/ntu.xzmcwjzs.WebApp/Views/Test/Index.cshtml
@@ -21,26 +21,24 @@
         $.messageBox5s('提示', mes);
     }
     $(function () {
-
         $("#btnCreate").click(function () {
-            $("#modalwindow").html("<iframe style='margin:0 auto' width='100%' height='98%' scrolling='no' frameborder='0'' src='/Test/Create'></iframe>");
+            $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0'' src='/Test/Create'></iframe>");
             $("#modalwindow").window({ title: '新增', width: 700, height: 400, iconCls: 'icon-add' }).window('open');
         });
         $("#btnEdit").click(function () {
             var row = $('#List').datagrid('getSelected');
             if (row != null) {
-                $("#modalwindow").html("<iframe width='100%' height='99%'  frameborder='0' src='/Test/Edit?id=" + row.id + "&Ieguid=" + GetGuid() + "'></iframe>");
+                $("#modalwindow").html("<iframe width='100%' height='99%'  frameborder='0' src='/Test/Edit?id=" + row.id + "'></iframe>");
                 $("#modalwindow").window({ title: '编辑', width: 700, height: 430, iconCls: 'icon-edit' }).window('open');
             } else { $.messageBox5s('提示', '请选择要操作的记录'); }
         });
         $("#btnDetails").click(function () {
             var row = $('#List').datagrid('getSelected');
             if (row != null) {
-
-                $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0' src='/Test/Details?id=" + row.id + "&Ieguid=" + GetGuid() + "'></iframe>");
+                $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0' src='/Test/Details?id=" + row.id + "'></iframe>");
                 $("#modalwindow").window({ title: '详细', width: 500, height: 300, iconCls: 'icon-details' }).window('open');
             } else { $.messageBox5s('提示', '请选择要操作的记录'); }
-            });
+        });
         $("#btnQuery").click(function () {
             var queryStr = $("#txtQuery").val();
             //如果查询条件为空默认查询全部
@@ -56,59 +54,95 @@
             var row = $('#List').datagrid('getSelected');
             if (row != null) {
                 $.messager.confirm('提示', '确定删除', function (r) {
-                        if (r) {
-                            $.post("/Test/Delete?id=" + row.id, function (data) {
-                                if (data.type == 1)
-                                    $("#List").datagrid('load');
-                                $.messageBox5s('提示', data.message);
-                            }, "json");
+                    if (r) {
+                        $.post("/Test/Delete?id=" + row.id, function (data) {
+                            if (data.type == 1)
+                                $("#List").datagrid('load');
+                            $.messageBox5s('提示', data.message);
+                        }, "json");
 
-                        }
-                    });
+                    }
+                });
             } else { $.messageBox5s('提示', '请选择要操作的记录'); }
-            });
+        });
     });
 </script>
 <div id="modalwindow" class="easyui-window" data-options="modal:true,closed:true,minimizable:false,shadow:false"></div>
 
-    <div>
-        <input id="txtQuery" type="text" class="searchText">
-        <a id="btnQuery" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-search'">查询</a>
-        <a id="btnCreate" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-add'">新增</a>
-        <a id="btnEdit" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-edit'">编辑</a>
-        <a id="btnDetails" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-more'">详细</a>
-        <a id="btnDelete" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-remove'">删除</a>
-        @*<a id="btnExport" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-save'">导出</a>
-            <a id="btnReload" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-reload'">刷新</a>*@
-    </div>
-    <table id="List"></table>
-    <script type="text/javascript">
-        $(function () {
-            $('#List').datagrid({
-                url: '/Test/GetList',
+<div>
+    <input id="txtQuery" type="text" class="searchText">
+    <a id="btnQuery" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-search'">查询</a>
+    <a id="btnCreate" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-add'">新增</a>
+    <a id="btnEdit" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-edit'">编辑</a>
+    <a id="btnDetails" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-more'">详细</a>
+    <a id="btnDelete" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-remove'">删除</a>
+    @*<a id="btnExport" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-save'">导出</a>
+        <a id="btnReload" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-reload'">刷新</a>*@
+</div>
+<table id="List"></table>
+<script type="text/javascript">
+    $(function () {
+        $('#List').datagrid({
+            url: '/Test/GetList',
+            width: $(window).width() - 10,
+            methord: 'post',
+            height: $(window).height() - 60,
+            fitColumns: true,
+            sortName: 'id',
+            sortOrder: 'desc',
+            idField: 'id',
+            pageSize: 15,
+            pageList: [15, 20, 30, 40, 50],
+            pagination: true,
+            striped: true, //奇偶行是否区分
+            singleSelect: true,//单选模式
+            rownumbers: true,//行号
+            columns: [[
+                { field: 'id', title: 'ID', width: 80 },
+                { field: 'name', title: '名称', width: 150 },
+                { field: 'password', title: '密码', width: 150, align: 'right' },
+                { field: 'id_card_num', title: '身份证号', width: 200, align: 'right' },
+                {
+                    field: 'birthdate', title: '出生日期', width: 150,
+                    formatter: function (value, row, index) { 
+                        if (value != null) {
+                            var date = new Date(parseInt(value.replace("/Date(", "").replace(")/", ""), 10));
+                            var a0 = date.getFullYear();
+                            var a1 = date.getMonth() + 1 < 10 ? "0" + (date.getMonth() + 1) : date.getMonth() + 1;
+                            var a2 = date.getDate() < 10 ? "0" + date.getDate() : date.getDate();
+                            return a0+'-'+a1+'-'+a2
+                        } 
+                    } 
+                },
+                { field: 'photo', title: '美图', width: 150, align: 'center' },
+                {
+                    field: 'createtime', title: '创建时间', width: 100, align: 'center', formatter: function (value, row, index) {
+                        if (value != null) {
+                            var date = new Date(parseInt(value.replace("/Date(", "").replace(")/", ""), 10));
+                            var a0 = date.getFullYear();
+                            var a1 = date.getMonth() + 1 < 10 ? "0" + (date.getMonth() + 1) : date.getMonth() + 1;
+                            var a2 = date.getDate() < 10 ? "0" + date.getDate() : date.getDate();
+                            var a3 = date.getHours() < 10 ? "0" + date.getHours() : date.getHours();
+                            var a4 = date.getMinutes() < 10 ? "0" + date.getMinutes() : date.getMinutes();
+                            var a5 = date.getMilliseconds() < 10 ? "0" + date.getMilliseconds() : date.getMilliseconds();
+                            return a0 + '-' + a1 + '-' + a2+' '+a3+':'+a4+':'+a5
+                        }
+                    }
+                }
+            ]]
+        });
+    });
+
+    $(function () {
+        $(window).resize(function () {
+            $('#List').datagrid('resize', {
                 width: $(window).width() - 10,
-                methord: 'post',
-                height: $(window).height() - 35,
-                fitColumns: true,
-                sortName: 'id',
-                sortOrder: 'desc',
-                idField: 'id',
-                pageSize: 15,
-                pageList: [15, 20, 30, 40, 50],
-                pagination: true,
-                striped: true, //奇偶行是否区分
-                singleSelect: true,//单选模式
-                rownumbers: true,//行号
-                columns: [[
-                    { field: 'id', title: 'ID', width: 80 },
-                    { field: 'name', title: '名称', width: 150 },
-                    { field: 'password', title: '密码', width: 150, align: 'right' },
-                    { field: 'id_card_num', title: '身份证号', width: 200, align: 'right' },
-                    { field: 'birthdate', title: '出生日期', width: 150 },
-                    { field: 'photo', title: '美图', width: 150, align: 'center' },
-                    { field: 'createtime', title: '创建时间', width: 100, align: 'center' }
-                ]]
+                height: $(window).height() - 35
+            }).datagrid('resize', {
+                width: $(window).width() - 10,
+                height: $(window).height() - 35
             });
         });
-    </script>
+    });
+</script>
 
